<resources>
    <string name="app_name">Weather</string>
    <string name="title_activity_home">HomeActivity</string>

    <string name="no_network">No network connection</string>

    <string name="humidity">Humidity</string>
    <string name="pressure">Pressure</string>
    <string name="wind">Wind</string>

    <string name="clouds">Clouds</string>
    <string name="rain">Rain</string>
    <string name="clear">Clear</string>

    <string name="daily">Daily Forecast</string>
    <string name="daily_graph">Daily Temperature Graph</string>

    <string name="settings">Settings</string>

    <string name="humidity_default">%</string>
    <string name="pressure_default">hPa</string>
    <string name="wind_default">m/sec</string>

    <string name="temp_unit">Temp Unit</string>
    <string name="celsius">\u2103</string>
    <string name="fahrenheit">\u2109</string>

    <string name="time_format">Time Format</string>
    <string name="h24">24h</string>
    <string name="h12">12h</string>

    <string name="notif">Notification</string>
    <string name="on">On</string>
    <string name="off">Off</string>

    <string name="err_msg1">Error occured</string>

</resources>
